# Polaris

./: .gitignore  CMakeLists.txt  LBuild.sh  LICENSE  README.md  TODO.MD
Engine/: README
Engine/Core/: Core.hpp  Polaris.cpp
Engine/Core/Entry/: Entry.cpp
Engine/Core/Include/: Entry.hpp
Engine/Core/Modules/: Module.cpp  Modules.hpp
Engine/Include/: Polaris.hpp
PolarisRuntime/: Entry.cpp  Entry.hpp  Runtime.cpp
ProjectSetup/: README.md  Setup.py  config.hpp  test.py
Setup/: Build.py  LBuild.sh  Setup.py
Testing/: main.cpp
core/: Args.hpp  Entry.cpp  README.md  arg_actions.hpp
core/Init/: Module_Init.cpp  Module_Init.hpp  PCLT_Init.cpp  PCLT_Init.hpp
core/Libraries/: README.md
